// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders customer details when data is loaded 1`] = `
<div>
  <div
    class="mb-4 flex items-center gap-3 border-b border-gray-200 pb-4 dark:border-slate-800"
  >
    <div
      class="bg-primary-600 flex h-10 w-10 items-center justify-center rounded-md"
    >
      <svg
        class="text-white"
        fill="none"
        height="20"
        icon=""
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="14"
          rx="2"
          width="20"
          x="2"
          y="5"
        />
        <line
          x1="2"
          x2="22"
          y1="10"
          y2="10"
        />
      </svg>
    </div>
    <h2
      class="m-0 flex-1 text-lg font-semibold text-gray-900 dark:text-gray-100"
    >
      Billing Addresses
    </h2>
    <span
      badge=""
      class="bg-primary-600 inline-flex h-6 min-w-[1.5rem] items-center justify-center rounded-full px-2 text-xs font-medium text-white"
    >
      1
    </span>
  </div>
  <div
    class="grid grid-cols-1 gap-4 md:grid-cols-[repeat(auto-fill,minmax(280px,1fr))]"
  >
    <div
      class="rounded-md border border-gray-200 bg-white p-4 dark:border-slate-800 dark:bg-slate-900"
    >
      <div
        class="flex items-start justify-between gap-3 border-b border-gray-100 py-2 dark:border-slate-800"
      >
        <span
          class="text-xs font-medium tracking-wider text-gray-600 uppercase dark:text-gray-400"
        >
           Street 
        </span>
        <span
          class="text-right text-sm font-medium text-gray-900 dark:text-gray-100"
        >
          123 Billing St
        </span>
      </div>
      <div
        class="flex items-start justify-between gap-3 border-b border-gray-100 py-2 dark:border-slate-800"
      >
        <span
          class="text-xs font-medium tracking-wider text-gray-600 uppercase dark:text-gray-400"
        >
           City 
        </span>
        <span
          class="text-right text-sm font-medium text-gray-900 dark:text-gray-100"
        >
          Bill City
        </span>
      </div>
      <div
        class="flex items-start justify-between gap-3 py-2"
      >
        <span
          class="text-xs font-medium tracking-wider text-gray-600 uppercase dark:text-gray-400"
        >
           Zip Code 
        </span>
        <span
          class="text-right text-sm font-medium text-gray-900 dark:text-gray-100"
        >
          12345
        </span>
      </div>
    </div>
    <!--container-->
  </div>
</div>
`;

exports[`renders customer details when data is loaded 2`] = `
<div>
  <div
    class="mb-4 flex items-center gap-3 border-b border-gray-200 pb-4 dark:border-slate-800"
  >
    <div
      class="bg-primary-600 flex h-10 w-10 items-center justify-center rounded-md"
    >
      <svg
        class="text-white"
        fill="none"
        height="20"
        icon=""
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 3h5v5M4 20L21 3M21 16v5h-5M15 15l6 6M4 4l5 5"
        />
      </svg>
    </div>
    <h2
      class="m-0 flex-1 text-lg font-semibold text-gray-900 dark:text-gray-100"
    >
      Shipping Addresses
    </h2>
    <span
      badge=""
      class="bg-primary-600 inline-flex h-6 min-w-[1.5rem] items-center justify-center rounded-full px-2 text-xs font-medium text-white"
    >
      2
    </span>
  </div>
  <div
    class="grid grid-cols-1 gap-4 md:grid-cols-[repeat(auto-fill,minmax(280px,1fr))]"
  >
    <div
      class="rounded-md border border-gray-200 bg-white p-4 dark:border-slate-800 dark:bg-slate-900"
    >
      <div
        class="flex items-start justify-between gap-3 border-b border-gray-100 py-2 dark:border-slate-800"
      >
        <span
          class="text-xs font-medium tracking-wider text-gray-600 uppercase dark:text-gray-400"
        >
           Street 
        </span>
        <span
          class="text-right text-sm font-medium text-gray-900 dark:text-gray-100"
        >
          456 Shipping Ave
        </span>
      </div>
      <div
        class="flex items-start justify-between gap-3 border-b border-gray-100 py-2 dark:border-slate-800"
      >
        <span
          class="text-xs font-medium tracking-wider text-gray-600 uppercase dark:text-gray-400"
        >
           City 
        </span>
        <span
          class="text-right text-sm font-medium text-gray-900 dark:text-gray-100"
        >
          Ship City
        </span>
      </div>
      <div
        class="flex items-start justify-between gap-3 py-2"
      >
        <span
          class="text-xs font-medium tracking-wider text-gray-600 uppercase dark:text-gray-400"
        >
           Zip Code 
        </span>
        <span
          class="text-right text-sm font-medium text-gray-900 dark:text-gray-100"
        >
          67890
        </span>
      </div>
      <div
        class="mt-4 border-t border-gray-200 pt-4 dark:border-slate-800"
      >
        <span
          class="mb-2 block text-xs font-medium tracking-wider text-gray-600 uppercase dark:text-gray-400"
        >
           Note 
        </span>
        <p
          class="m-0 rounded-md border border-gray-200 bg-gray-50 p-3 text-sm leading-relaxed text-gray-900 dark:border-slate-700 dark:bg-slate-800 dark:text-gray-100"
        >
           Leave at door 
        </p>
      </div>
      <!--container-->
    </div>
    <div
      class="rounded-md border border-gray-200 bg-white p-4 dark:border-slate-800 dark:bg-slate-900"
    >
      <div
        class="flex items-start justify-between gap-3 border-b border-gray-100 py-2 dark:border-slate-800"
      >
        <span
          class="text-xs font-medium tracking-wider text-gray-600 uppercase dark:text-gray-400"
        >
           Street 
        </span>
        <span
          class="text-right text-sm font-medium text-gray-900 dark:text-gray-100"
        >
          789 Delivery Rd
        </span>
      </div>
      <div
        class="flex items-start justify-between gap-3 border-b border-gray-100 py-2 dark:border-slate-800"
      >
        <span
          class="text-xs font-medium tracking-wider text-gray-600 uppercase dark:text-gray-400"
        >
           City 
        </span>
        <span
          class="text-right text-sm font-medium text-gray-900 dark:text-gray-100"
        >
          Deliver Town
        </span>
      </div>
      <div
        class="flex items-start justify-between gap-3 py-2"
      >
        <span
          class="text-xs font-medium tracking-wider text-gray-600 uppercase dark:text-gray-400"
        >
           Zip Code 
        </span>
        <span
          class="text-right text-sm font-medium text-gray-900 dark:text-gray-100"
        >
          54321
        </span>
      </div>
      <!--container-->
    </div>
    <!--container-->
  </div>
</div>
`;
